fix: update button styles to use oklch color for better contrast and accessibility

--- a/src/react-obj-view/components/style.css
+++ b/src/react-obj-view/components/style.css
@@ -241,7 +241,8 @@
 
         button {
             opacity: 0.5;
-            background-color: var(--bigobjview-action-btn);
+            color: var(--color);
+            background-color: oklch(from var(--color) clamp(0,70 - l * 100,1) 0 0);
             font-weight: bold;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -261,11 +262,11 @@
 
         button.error {
             background-color: var(--bigobjview-action-error, red);
-            color: #fff;
+            color: oklch(from var(--bigobjview-action-error) clamp(0,70 - l * 100,1) 0 0);
         }
         button.success {
             background-color: var(--bigobjview-action-success, rgb(0, 139, 0));
-            color: #fff;
+            color: oklch(from var(--bigobjview-action-success) clamp(0,70 - l * 100,1) 0 0);
         }
     }
 
